Updated batch run and compile codes for Windows operating system. Added pause to allow us to check error/compile messages.

--- a/dbConfig.ini
+++ b/dbConfig.ini
@@ -1,4 +1,4 @@
-username=rjoac1
-password=rjoac1_fall14_1
-dbName=rjoac1_spring15_1
+username=mwald1
+password=mysqlpassword
+dbName=mwald1_spring15_1
 server=csdb.brockport.edu
